git commit -m "this are just trials "

--- a/index6.html
+++ b/index6.html
@@ -6,14 +6,10 @@
   <title>Document</title>
   <link rel="stylesheet" href="index6.css">
 </head>
-<div>people entered</div>
 <body>
   <h1>People entered: </h1>
   <h2 id="count-el">0</h2>
-  <button id="increment-btn" onclick="increment()">INCREAMENT</button><br><br>
-  <button onclick="number()">press</button>
-  <br><br>
-  <button onclick="TOTAL()">totalLaps</button>
+  <button id="increment-btn" onclick="increment()">INCREMENT</button><br><br>
   <script src="index6.js">
     
   </script>
